--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.css
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.css
@@ -1,10 +1,7 @@
 .form {
     margin: 20px;
   }
-.input {
-    width: 100%;
-    max-width: 90%;
-  }
+
 .check {
     margin-top:10px;
     margin-bottom: 10px;
@@ -46,10 +43,18 @@
 
 .custom-card-title{
   font-size: 24px;
-  float: left;
-  margin-top: 80px;
+  margin: 0;
   color: white;
-  background-color: rgb(85,118,184);
   padding: 6px 30px;
   position:relative;
+  text-align: left;
+
+  background-color: rgba(85, 118, 184, 0.9);
+  width: 100%;
+}
+
+.forms-group {
+  border-radius: 2px;
+  border: 1px rgba(0, 0, 0, 0.11) solid;
+  padding: 10px;
 }
