--- a/frontend/csyllabus/src/app/core/result-cards-comparator/course-dialog/course-dialog.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards-comparator/course-dialog/course-dialog.component.html
@@ -1,6 +1,8 @@
 <div style="margin-top:-50px; width: 100%;  ">
 
-  <p *ngIf="!course"loading>course:</p>
+  <p *ngIf="!course" style="padding: 50px;">
+    <mat-spinner></mat-spinner>
+  </p>
   <div *ngIf="course">
     <div >
         <div style="text-align:left; background-color:#448AFF; padding: 80px 0 10px 0; width: calc(100% + 48px); margin-left: -24px;" class="col-md-12">
