--- a/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
+++ b/frontend/csyllabus/src/app/core/result-cards/course-dialog/course-dialog.component.html
@@ -1,6 +1,8 @@
 <div class="custom-scrollbar" style="width: 100%; overflow-x: hidden; overflow-y: auto; max-height: 90vh;">
 
-  <p *ngIf="!course" loading>course:</p>
+  <p *ngIf="!course" style="padding: 50px;">
+    <mat-spinner></mat-spinner>
+  </p>
   <div *ngIf="course">
     <div>
       <div
@@ -13,7 +15,7 @@
 
       </div>
 
-      <img class="logoU" src="http://www.clker.com/cliparts/7/4/b/6/13373556381963102819fer.logo_.png" height="80">
+      <!--<img class="logoU" src="http://www.clker.com/cliparts/7/4/b/6/13373556381963102819fer.logo_.png" height="80">-->
       <div class="col-md-12">
 
         <div style="vertical-align:top; text-align:left; line-height: 1.5;" class="col-md-8">
