Dev unit tests v1 (#38)
* Unit tests dev version

* Unit tests Service with response

* script cmd backend

* Update README.md

* Update README.md

* Update README.md

* Unit test Service Mock + Script backend linux

* Unit test Service Mock + Script backend linux

* Delete sh

* add unit test chip list and error service

* Correct TSLINT error

* Add Comments and refactoring

--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -16,9 +16,9 @@
         <div class="details">
           <div class="subtitle">Details</div>
           <div style="margin:20px">
-              <h4 style="margin:5px"><img matIcon src="https://png.icons8.com/debt/color/50/000000" height="30" width="30"> &nbsp; ECTS: &nbsp;  {{course.ects}}</h4>
-              <h4 style="margin:5px"><img matIcon src="https://png.icons8.com/voice-recognition/color/50/000000" height="30" width="30"> &nbsp; English Level:  &nbsp;   {{course.englishLevel}}</h4> 
-              <h4 style="margin:5px"><img matIcon src="https://png.icons8.com/read-online/color/50/000000" height="30" width="30"> &nbsp; Semester: &nbsp;   {{course.semester}}</h4> 
+              <h4 style="margin:5px"><img matIcon style="margin-right:10px" src="https://png.icons8.com/debt/color/50/000000" height="40" width="40"> &nbsp; ECTS: &nbsp;  {{course.ects}}</h4>
+              <h4 style="margin:5px"><img matIcon style="margin-right:10px" src="https://png.icons8.com/voice-recognition/color/50/000000" height="40" width="40"> &nbsp; English Level:  &nbsp;   {{course.englishLevel}}</h4>
+              <h4 style="margin:5px"><img matIcon  style="margin-right:10px" src="https://png.icons8.com/read-online/color/50/000000" height="40" width="40"> &nbsp; Semester: &nbsp;   {{course.semester}}</h4>
           </div>
         </div>
         <div class="description">
@@ -27,24 +27,7 @@
 
         </div>
         <p><b>Modified: </b>{{course.modified}}&nbsp;&nbsp;&nbsp;<b>Created:  </b>{{course.created}}</p>
-    <!--
-        <mat-card class="social">
-          <h2 style="text-align:center">Teachers</h2>
-          <img src="http://gamesandlearning.umich.edu/wp-content/uploads/2014/10/teacherprofiles-infographic11.png"
-               height="300" width="300">
-        </mat-card>
-      -->    
       </div>
-<!--
-      <mat-card>
-        <h2 style="text-align:center">Evaluations</h2>
-        <img src="https://png.icons8.com/rating/color/50/000000">
-        <h2 style="text-align:center">Comments</h2>
-        <img src="http://www.free-icons-download.net/images/comments-icon-62900.png" height="50px" width="50px">
-      </mat-card>
-      <img src="https://png.icons8.com/data-backup/color/50/000000"height="30" width="30">
-      <img src="https://png.icons8.com/add-database/color/50/000000"height="30" width="30">
-    -->
     </div>
   </div>
 </div>
