--- a/frontend/admin/src/app/user/user/user.component.html
+++ b/frontend/admin/src/app/user/user/user.component.html
@@ -1,109 +1,83 @@
-<div class="mdl-grid demo-content" *ngIf="user">
-  <div class="emo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-card">
-    <div class="mdl-card__title">
-      <h2 class="mdl-card__title-text mdl-color-text--primary">User properties</h2>
-    </div>
-    <div class="mdl-card__supporting-text mdl-grid">
-      <div class="mdl-cell mdl-cell--6-col-desktop">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <label class="mdl-textfield__label">Username: </label>
-          <input class="mdl-textfield__input" type="text"
-                 [(ngModel)]="user.username" placeholder="Enter string">
-        </div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <label class="mdl-switch mdl-js-switch mdl-js-ripple-effect" for="switch-1">
-            <span class="mdl-switch__label">Admin</span>
-            <input type="checkbox" id="switch-1" class="mdl-switch__input"  [(ngModel)]="user.admin" >
-          </label>
-        </div>
-        <div class="mdl-cell">
-          <label class="mdl-color-text--primary" for="main_img_img">Profilna slika: </label>
-          <div style="text-align: center; padding: 20px;">
-            <img id="main_img_img" src="{{dataUrl}}/img/user/{{user._id}}/{{user.profile_img}}" height="150">
-          </div>
-          <button id="main_image_btn" class="mdl-button mdl-js-button mdl-button--primary"
-                  ng-click="group.changed = 1">
-            ODABERI DATOTEKU
-          </button>
-          <input class="mdl-textfield__input" type="file"
-                 name="main_image" id="main_image"
-                 [(ngModel)]="user.img"
-                 ng-change="group.changed = 1">
-        </div>
-      </div>
-      <div class="mdl-cell mdl-cell--6-col-desktop">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <label class="mdl-textfield__label">Password: </label>
-          <input class="mdl-textfield__input" type="password"
-                 [(ngModel)]="user.password">
-        </div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-             ng-if="changePassword">
-          <label class="mdl-textfield__label">New password: </label>
-          <input class="mdl-textfield__input" type="password"
-                 [(ngModel)]="user.newPassword" >
-        </div>
-        <br>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
-             ng-if="changePassword">
-          <label class="mdl-textfield__label">Repeat password: </label>
-          <input class="mdl-textfield__input" type="password"
-                 [(ngModel)]="user.newPassword2">
-        </div>
-        <button class="mdl-button mdl-js-button mdl-button--primary"
-                ng-class="changePassword ? 'mdl-button--raised': ''"
-                ng-click="togglePassword()">
-          Change password <i class="material-icons">lock</i>
-        </button>
-      </div>
-      <br>
-    </div>
-    <div class="mdl-card__actions mdl-card--border" style="text-align: center;">
-      <button class="mdl-button mdl-js-button mdl-color-text--primary"
-              ng-click="saveUserData(0)"
-              ng-disabled="group.changed == 0">
-        SAČUVAJ
-      </button>
-      <button class="mdl-button mdl-js-button mdl-color-text--primary"
-              ng-click="saveUserData(1)"
-              ng-disabled="group.changed == 0">
-        SAČUVAJ I PRIKAŽI
-      </button>
-    </div>
-    <div class="mdl-card__menu">
-      <button id="demo_menu-top-right" class="mdl-button mdl-js-button mdl-button--icon"
-              data-upgraded=",MaterialButton">
-        <i class="material-icons">more_vert</i>
-      </button>
-      <ul class="mdl-menu 	mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="demo_menu-top-right">
-        <li disabled class="mdl-menu__item" ng-click="createReport()">GENERIRAJ PDF IZVJEŠTAJ</li>
-      </ul>
-    </div>
+<div style="height: 70px;" *ngIf="user">
+  <div style="max-width: 1000px; margin-left: auto; margin-right: auto; vertical-align: middle;">
+    <a [routerLink]="['/users']" style=" display: inline-block;vertical-align: middle;">Users</a>
+    <mat-icon style=" display: inline-block;vertical-align: middle;">chevron_right</mat-icon>
+    <a [routerLink]="['/user/' + user.id]" style=" display: inline-block;vertical-align: middle;"> User {{user.id}}</a>
   </div>
 </div>
-<style>#main_image, #add_image {
-  display: none;
-}</style>
-<script>
+<div id="search-component-spinner" *ngIf="!user ">
+  <mat-spinner style="margin-left: auto; margin-right: auto;"></mat-spinner>
+</div>
 
-  $('#main_image_btn').click(function () {
-    $('#main_image').click();
-  });
+<mat-card *ngIf="user">
+  <mat-card-title class="intrev-card-title">User #{{user.id}}
+    <mat-card-subtitle style="color: white; margin-bottom: 0;">Editing user resource</mat-card-subtitle>
+  </mat-card-title>
 
-  document.getElementById("main_image").onchange = function () {
-    var reader = new FileReader();
 
-    reader.onload = function (e) {
-      // get loaded data and render thumbnail.
-      document.getElementById("main_img_img").src = e.target.result;
-    };
+  <mat-expansion-panel [expanded]="true">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        User data
+      </mat-panel-title>
+      <mat-panel-description>
+        Change your provided user data
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div>
+      <mat-form-field>
+        <input matInput placeholder="First Name" [(ngModel)]="user.first_name">
+      </mat-form-field>
+      <br>
+      <mat-form-field>
+        <input matInput placeholder="Last Name" [(ngModel)]="user.last_name">
+      </mat-form-field>
+      <br>
+      <mat-form-field>
+        <input matInput placeholder="Email" [(ngModel)]="user.email" type="email">
+      </mat-form-field>
+    </div>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Username
+        </mat-panel-title>
+        <mat-panel-description>
+          Change the username used to login
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <mat-form-field>
+        <input matInput placeholder="Username" [(ngModel)]="user.username">
+      </mat-form-field>
+    </mat-expansion-panel>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Password
+        </mat-panel-title>
+        <mat-panel-description>
+          Change your password used to login
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <div>
+        <p><label>Changing password</label></p>
+        <mat-form-field>
+          <input matInput placeholder="New password" [(ngModel)]="newPassword" type="password" [formControl]="password">
+          <mat-error *ngIf="newPassword2 && (newPassword != newPassword2)">Passwords don't match</mat-error>
+        </mat-form-field>
+        <br>
+        <mat-form-field>
+          <input matInput placeholder="Retype new password" [(ngModel)]="newPassword2" type="password" [formControl]="password2">
+          <mat-error *ngIf="newPassword != newPassword2">Passwords don't match</mat-error>
+        </mat-form-field>
+      </div>
+    </mat-expansion-panel>
 
-    // read the image file as a data URL.
-    reader.readAsDataURL(this.files[0]);
-  };
-  setTimeout(function(){
-    componentHandler.upgradeAllRegistered();
-  }, 1000);
 
-</script>
-
+    <mat-card-actions style="text-align: center;">
+      <button mat-button (click)="saveUser()">
+        <mat-icon>save</mat-icon>
+        SAVE
+      </button>
+    </mat-card-actions>
