--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -27,6 +27,7 @@
               <a mat-icon-button target="_blank" href="https://csyllabus.com/demo/course/{{course.id}}">
                 <mat-icon>link</mat-icon>
               </a>
+<app-social></app-social>
             </form>
           </div>
 
@@ -78,4 +79,5 @@
     </div>
   </div>
 </div>
+
 
