--- a/frontend/csyllabus/src/app/components/navbar/navbar.component.html
+++ b/frontend/csyllabus/src/app/components/navbar/navbar.component.html
@@ -3,6 +3,7 @@
         <img routerLink="core" class="logo" src="https://preview.ibb.co/cLsuiR/logotopbar.png">
 
     <div id="navigation">
+    <a routerLink="atp">ACCEPTANCE TEST PLAN</a>            
     <a routerLink="documentation">DOCUMENTATION</a>
     <a routerLink="about">ABOUT</a>
     <a routerLink="core">EXPLORE & COMPARE</a>
@@ -19,6 +20,9 @@
         </button>
         <button mat-menu-item routerLink="documentation">
             <span>Documentation</span>
+        </button>
+        <button mat-menu-item routerLink="atp">
+            <span>Acceptance test plan</span>
         </button>
     </mat-menu>
 </mat-toolbar>
