--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,4 +1,15 @@
 
+    <section id="landing-page">
+        <div class="inner">
+            <p>The Csyllabus Developer Center</p>
+            <h1>Connect your course data with us</h1>
+            <ul class="actions">
+               <li> <a class="button big special scrolly" fragment="one" (click)="onAnchorClick()">Start</a>
+</li>
+            </ul>
+        </div>
+    </section>
+
 <div class="bgexplorer">
   <div class="col-md-12">
     <p id="typewriter" class="chooser-heading"></p>
