--- a/frontend/admin/src/app/user/user/user.component.html
+++ b/frontend/admin/src/app/user/user/user.component.html
@@ -36,6 +36,21 @@
       <mat-form-field>
         <input matInput placeholder="Email" [(ngModel)]="user.email" type="email">
       </mat-form-field>
+      <br>
+      <mat-form-field class="input">
+          <mat-select required placeholder="Select University/Faculty" [formControl]="pokemonControl">
+            <mat-optgroup *ngFor="let country of countries" [label]="country.name">
+              <mat-option *ngFor="let university of country.universities" [value]="university"
+                          (click)="user.university = university.id;">
+                {{university.name}}
+              </mat-option>
+              <mat-option *ngFor="let faculty of country.faculties" [value]="faculty"
+                          (click)="user.faculty = faculty.id;">
+                {{faculty.name}}
+              </mat-option>
+            </mat-optgroup>
+          </mat-select>
+        </mat-form-field>
     </div>
     </mat-expansion-panel>
     <mat-expansion-panel>
