landing page design

--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -1,13 +1,15 @@
 
     <section id="landing-page">
-        <div class="inner">
-            <p>The Csyllabus Developer Center</p>
-            <h1>Connect your course data with us</h1>
+        <div class="inner" style="margin-top:-30px;">
+           <div  style="box-shadow:inset 0 0 0 1000px rgba(0,0,0,0.3); padding:5%; width:70%; margin:auto;">
+            <p>Discover courses all over the world</p>
+            <h1 style="color:white; font-size:">Going on Erasmus and don't know which courses to take?</h1>
             <ul class="actions">
-               <li> <a class="button big special scrolly" fragment="one" (click)="onAnchorClick()">Start</a>
+               <li> <a class="button big special scrolly" fragment="one" (click)="onAnchorClick()">Explore and compare courses</a>
 </li>
             </ul>
         </div>
+            </div>
     </section>
 
 <div class="bgexplorer">
