--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -2,7 +2,7 @@
     <section id="landing-page">
         <div class="inner" style="margin-top:-30px;">
            <div  style="box-shadow:inset 0 0 0 1000px rgba(0,0,0,0.3); padding:5%; width:70%; margin:auto;">
-            <p>Discover courses all over the world</p>
+            <p style="font-size:1.3em;">Discover courses all over the world</p>
             <h1 style="color:white; font-size:">Going on Erasmus and don't know which courses to take?</h1>
             <ul class="actions">
                <li> <a class="button big special scrolly" fragment="one" (click)="onAnchorClick()">Explore and compare courses</a>
