--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -5,14 +5,14 @@
             <p style="font-size:1.3em;">Discover courses all over the world</p>
             <h1 style="color:white; font-size:">Going on Erasmus and don't know which courses to take?</h1>
             <ul class="actions">
-               <li> <a class="button big special scrolly" fragment="one" (click)="onAnchorClick()">Explore and compare courses</a>
+               <li> <a class="button big special scrolly" fragment="start" [routerLink]="['/core']" (click)="onAnchorClick()">Explore and compare courses</a>
 </li>
             </ul>
         </div>
             </div>
     </section>
 
-<div class="bgexplorer">
+<div class="bgexplorer" id="start">
   <div class="col-md-12">
     <p id="typewriter" class="chooser-heading"></p>
     <br>
