--- a/frontend/csyllabus/src/app/core/explorer/explorer.component.css
+++ b/frontend/csyllabus/src/app/core/explorer/explorer.component.css
@@ -65,3 +65,10 @@
   border: 1px rgba(0, 0, 0, 0.07) solid;
   padding: 10px;
 }
+
+.mat-form-field {
+  width: 100% !important;
+}
+.input{
+  max-width: inherit !important;
+}
