--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.css
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.css
@@ -56,3 +56,10 @@
   border: 1px rgba(0, 0, 0, 0.11) solid;
   padding: 10px;
 }
+
+.mat-form-field {
+  width: 100% !important;
+}
+.input{
+  max-width: inherit !important;
+}
