remove that annoying add bottun

--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.html
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.html
@@ -22,7 +22,7 @@
         <div *ngIf="queryHomeUniversity || queryHomeFaculty">
           <mat-form-field class="input" style="width:80%">
             <input placeholder="Add course to compare list" matInput [formControl]="homeCoursesControl"
-                   [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse"
+                   [matAutocomplete]="home_courses_auto" [(ngModel)]="queryHomeCourse" (ngModelChange)="addCourseToList(queryHomeCourse)"
                    required>
             <mat-autocomplete #home_courses_auto="matAutocomplete" [displayWith]="displaySelect">
               <mat-option *ngFor="let course of filteredHomeCourses" [value]="course">
@@ -30,9 +30,7 @@
               </mat-option>
             </mat-autocomplete>
           </mat-form-field>
-          <button mat-icon-button (click)="addCourseToList(queryHomeCourse)">
-            <mat-icon matTooltip="Add to comparison list">add</mat-icon>
-          </button>
+
           <mat-chip-list>
             <mat-chip *ngFor="let course of listCourses" style="height: 30px;">
               {{course.name}}
